# MAKEGRID

./: CMakeLists.txt  README.md
.github/workflows/: ci_test.yaml  ci_test_master.yaml
Sources/: CMakeLists.txt  makegrid.f  makegrid_global.f  symcheck.f  write_mgrid.f
Testing/: CMakeLists.txt
Testing/test_utilities/: CMakeLists.txt  check_fields.f
Testing/tests/: CMakeLists.txt
Testing/tests/field_tests/: CMakeLists.txt  coils.test
